# python-typescript-cdktf-playground

./: .ecrc  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitallowed  .gitignore  .lintstagedrc.json  .lintstagedrc.mjs  .pre-commit-config.yaml  .prettierignore  .tool-versions  README.md  cdktf.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: lint.yaml
app/: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/app/drivers/: chat_http_client.py  secrets_storage.py
app/events/: api.py
app/simple-crud-function/: pyproject.toml
app/simple-crud-function/events/: requirements.txt
app/simple-crud-function/simple-crud-function/controllers/: api.py  protocols.py
app/simple-crud-function/simple-crud-function/drivers/: user_creation.py  user_deletion.py  user_desc.py  user_protocols.py  user_update.py
app/simple-crud-function/simple-crud-function/entities/: user.py
app/simple-crud-function/simple-crud-function/events/: user_creation.py
app/simple-crud-function/simple-crud-function/exceptions/: user.py
app/simple-crud-function/simple-crud-function/modules/: constants.py  type_hints.py  user.py
app/simple-crud-function/simple-crud-function/presenters/: error_response.py  error_responses.py  protocols.py
app/simple-crud-function/simple-crud-function/services/: user_creation.py  user_deletion.py  user_desc.py  user_protocol.py  user_protocols.py  user_update.py
app/simple-crud-function/simple-crud-function/use_cases/: protocols.py  user_creation.py  user_deletion.py  user_desc.py  user_update.py
app/simple-crud-function/simple-crud-function/validators/: user.py
app/simple-crud-function/tests/unit/drivers/: conftest.py  test_user_creation.py  test_user_deletion.py  test_user_desc.py  test_user_update.py
app/simple-crud-function/tests/unit/fixtures/: utils.py
app/simple-crud-function/tests/unit/use_cases/: conftest.py  test_user_desc.py
app/simple_crud_function/: README.md  pyproject.toml
app/simple_crud_function/simple_crud_function/controllers/: api.py  protocols.py
app/simple_crud_function/simple_crud_function/drivers/: user.py  user_creation.py  user_deletion.py  user_desc.py  user_update.py  users.py
app/simple_crud_function/simple_crud_function/events/: user_creation.py  user_deletion.py  user_desc.py  user_update.py  utils.py
app/simple_crud_function/simple_crud_function/exceptions/: user.py
app/simple_crud_function/simple_crud_function/modules/: type_hints.py
app/simple_crud_function/simple_crud_function/presenters/: error_response.py  error_responses.py  http_status_code.py  ok_response.py  ok_simple_response.py
app/simple_crud_function/simple_crud_function/presenters/error_responses/: common_error.py  internal_server_error.py  response_builder.py  response_factory.py
app/simple_crud_function/simple_crud_function/presenters/ok_responses/: common.py  no_content.py  response_builder.py
app/simple_crud_function/simple_crud_function/services/: user_creation.py  user_deletion.py  user_desc.py  user_update.py
app/simple_crud_function/simple_crud_function/use_cases/: protocols.py  user_creation.py  user_deletion.py  user_desc.py  user_update.py
app/simple_crud_function/simple_crud_function/validators/requests/: protocols.py  user_creation.py  user_deletion.py  user_deletion_and_desc.py  user_desc.py  user_update.py  utils.py
app/simple_crud_function/tests/unit/drivers/: conftest.py  test_user_creation.py  test_user_deletion.py  test_user_desc.py  test_user_update.py
app/simple_crud_function/tests/unit/events/: test_utils.py
app/simple_crud_function/tests/unit/fixtures/: table.py  utils.py
app/simple_crud_function/tests/unit/modules/: test_user.py
app/simple_crud_function/tests/unit/presenters/: test_error_response.py  utils.py
app/simple_crud_function/tests/unit/use_cases/: test_user_desc.py
app/simple_crud_function/tests/unit/validators/requests/: conftest.py  test_user_creation.py  test_user_deletion_and_desc.py  test_user_update.py
docs/: simple-crud-function.yaml
infrastructure/: .gitallowed  .gitignore  .lintstagedrc.json  .prettierignore  .tool-versions  cdktf.json  package.json
infrastructure/scripts/: build_layer.mjs
infrastructure/src/: main.ts
infrastructure/src/components/constructs/: function.ts  functionBucket.ts
infrastructure/src/components/stacks/: api.ts
infrastructure/src/lib/: constraints.json
infrastructure/src/modules/types/: index.ts
infrastructure/src/modules/utils/: constants.ts
scripts/: buildApp.mts  buildLayer.mts  build_layer.mjs  build_layer.mts  lintApp.mts  utils.ts
src/: handler.py
