[tool.poetry]
name = "fast-api-playground"
version = "0.1.0"
description = ""
authors = ["knakayama <knakayama.sh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fast_api_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^0.991"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ruff = "^0.0.194"
black = "^22.12.0"
poethepoet = "^0.16.5"
editorconfig-checker = "^2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.poe.tasks]

  [tool.poe.tasks.lint-ec]
  cmd = "ec ."

  [tool.poe.tasks.lint-ruff]
  cmd  = "ruff ."

  [tool.poe.tasks.lint-black]
  cmd = "black ."

  [tool.poe.tasks.lint-mypy]
  cmd = "mypy app"

  [tool.poe.tasks.lint]
  sequence  = [
    "lint-ec",
    "lint-ruff",
    "lint-black",
    "lint-mypy"
  ]

  [tool.poe.tasks.start]
  cmd = "uvicorn main:app --reload --app-dir app"
