[tool.poetry]
name = "python-lambda-playground"
version = "0.1.0"
description = ""
authors = ["knakayama <knakayama.sh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_lambda_playground"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
editorconfig-checker = "^2.6.2"
pre-commit = "^2.21.0"
ruff = "^0.0.196"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]

  [tool.poe.tasks.lint-ec]
  cmd = "ec ."

  [tool.poe.tasks.lint-ruff]
  cmd  = "ruff ."

  [tool.poe.tasks.lint-black]
  cmd = "black ."

  [tool.poe.tasks.lint-mypy]
  cmd = "mypy src"

  [tool.poe.tasks.lint]
  sequence  = [
    "lint-ec",
    "lint-ruff",
    "lint-black",
    "lint-mypy"
  ]
