[tool.poetry]
name = "python-lambda-playground"
version = "0.1.0"
description = ""
authors = ["knakayama <knakayama.sh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.991"
aws-lambda-powertools = "^2.5.0"
aws-lambda-typing = "^2.16.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ruff = "^0.0.196"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
